2013-08-20 John Wu <John dot Wu at ACM dot org>
	* src/column.h, src/column.cpp: add fucntion writeIndex
	* src/index.h, src/irelic.h, src/irelic.cpp, src/ibin.h,
	src/ibin.cpp, idirekte.h, idirekte.cpp, ikeywords.h,
	ikeywords.cpp: add function write that produce three arrays in
	memory
	* java/FastBit.c: add #include <stdlib.h>

2013-07-24 John Wu <John dot Wu at ACM dot org>
	* src/query.cpp, src/quaere.cpp: convert select * into a concrete
	list of names based on the current data partition (per request of
	Amihay Gonen)

2013-07-10 John Wu <John dot Wu at ACM dot org>
	* src/ikeywords.h: update the documentation about indexing
	set-valued columns
	* src/selectParser.yy: change keyword "distinct" to "countd" to
	avoid the confusion with the standard SQL keyword distinct
	* tests/Makefile.am: change distinct to countd in tests

2013-06-20 John Wu <John dot Wu at ACM dot org>
	* src/ibin.cpp:4491 retry fopen with the file assumed to be in the
	current data directory of the data partition (so avoid assuming
	full path)
	* src/irelic.cpp: initialize offset64 in the special case
	constructors
	* src/ixfuzz.cpp:769 add test for both offset64 and offset32 being
	empty (per suggestion of Per Christian Engberg)
	* src/whereClause.cpp, src/selectClause.cpp: add macro
	FASTBIT_HALT_ON_PARSER_ERROR to satisfy the request from Steven
	Enns

2013-06-19 John Wu <John dot Wu at ACM dot org>
	* src/ibin.cpp:6504 add conditional compilation macro
	FASTBIT_ESTIMATION_IGNORE_COST to allow estimation to always
	continue with the equality binned index

2013-06-15 John Wu <John dot Wu at ACM dot org>
	* src/ibin.cpp:3529-3530 free the granule object to address the
	memory leak problem reported by Amihay Gonen

2013-06-14 John Wu <John dot Wu at ACM dot org>
	* src/util.cpp:2132 replace fprintf with fwrite (in hope to avoid
	deadlock during closing of the logger object on windows, not sure
	what exactly was going on, but have seen it stuck in fprintf)