@@ -1221,11 +1221,15 @@ ibis::index::index(const ibis::column* c, ibis::fileManager::storage* s) :
     // }
 } // ibis::index::index
 
-/// Free the objectes pointed to by the pointers.
+/// Free the bitmap objectes common to all index objects.
 void ibis::index::clear() {
-    for (uint32_t i = 0; i < bits.size(); ++ i) {
-        delete bits[i];
-        bits[i] = 0;
+    if (bits.size() > 0) {
+        LOGGER(ibis::gVerbose > 7 && col != 0)
+            << "clearing index on column " << col->name();
+        for (uint32_t i = 0; i < bits.size(); ++ i) {
+            delete bits[i];
+            bits[i] = 0;
+        }
     }
     bits.clear();
     offset32.clear();
