@@ -588,10 +588,10 @@ ibis::part::part(const char* adir, const char* bdir, bool ro) :
 
 // the destructor
 ibis::part::~part() {
+    LOGGER(ibis::gVerbose > 3 && m_name != 0)
+        << "clearing data partition " << name();
     {   // make sure all read accesses have finished
 	writeLock lock(this, "~part");
-	LOGGER(ibis::gVerbose > 2 && m_name != 0)
-	    << "clearing data partition " << name();
 
 	// Because the key in the std::map that defined the columns are
 	// part of the objects to be deleted, need to copy the columns into
